--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 10:34:00 PM</p>
+    <p class="lastupdate">09/18/2020 10:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -86,8 +86,8 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">90.6<br/>
             <span class="timestamp">02:15:01 PM</span><br/>
-            63.6<br/>
-            <span class="timestamp">06:50:10 AM</span>
+            63.4<br/>
+            <span class="timestamp">10:38:08 PM</span>
           </td>
           <td class="data new_row">96.4<br/>
             <span class="timestamp">02:42:47 PM (Wednesday)</span><br/>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">63.6<br/>
-            <span class="timestamp">06:50:10 AM</span>
+          <td class="data new_row">63.4<br/>
+            <span class="timestamp">10:38:08 PM</span>
           </td>
           <td class="data new_row">46.1<br/>
             <span class="timestamp">06:54:23 AM (Wednesday)</span>
