--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 11:09:00 PM</p>
+    <p class="lastupdate">09/18/2020 11:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.8&#176;F</td>
+        <td class="data">62.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.8&#176;F</td>
+        <td class="data">62.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.8&#176;F</td>
+        <td class="data">62.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.4&#176;F</td>
+        <td class="data">54.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.932 inHg (0.034)</td>
+        <td class="data">29.931 inHg (0.031)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph WNW (292&#176;)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.9&#176;F</td>
+        <td class="data">75.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="02:15:01 PM">
             90.6</span><br/>
-          <span title="11:06:20 PM">
-            62.8</span>
+          <span title="11:12:48 PM">
+            62.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="11:06:20 PM" class="loval">
-            62.8</span>
+          <span title="11:12:48 PM" class="loval">
+            62.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 8 hours, 22 minutes</td>
+      <td class="data">17 days, 8 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 8 hours, 22 minutes</td>
+      <td class="data">17 days, 8 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
